[package]
name = "async-graphql-utils"
version = "0.1.2"
edition = "2021"
authors = ["Cosmo André"]
description = "Inclui ajudantes para facilitar o desenvolvimento usando async-graphql"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cosmo9able/async-graphql-utils"
keywords = ["async-graphql", "mongodb"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "5.0.9"
mongodb = "2.5.0"
